added example and test of pagination and named query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.logging.level.org.hibernate.SQL=debug
 spring.datasource.url=jdbc:postgresql://localhost:5432/fortitude
 spring.datasource.username=postgres
 spring.datasource.password=
+
+humanResourcePageSize=5
