created method findAllCustomerWithPagination and findAllCustomerOrderByNameDesc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.logging.level.org.hibernate.SQL=debug
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/fortitude
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=123456
 
 humanResourcePageSize=5
